# book_recommendation_RAG

./: .gitignore  README.md  gradio.py  index_books.py  main.py  pyproject.toml  requirements.txt  search_books.py  server.py
cv_finder_frontend/: package.json
cv_finder_frontend/app/: assistant.tsx  layout.tsx
cv_finder_frontend/components/ui/: input.tsx
data/: generated_dataset.csv  ner_combined.csv  ner_data_augmentation.csv  ner_eval_merged.jsonl  ner_train_merged.jsonl  text_clasification.csv
data_augmentation/: analyze_genres.py  main.py  merge_ner_datasets.py
data_augmentation/openai_client/: generate.py  ouput_schema.py  setup.py
frontend/: package-lock.json  pnpm-lock.yaml
frontend/api/chat/: route.ts
frontend/app/: assistant.tsx  globals.css  layout.tsx
frontend/components/assistant-ui/: theme-toogle.tsx  thread.tsx
jupyter_notebooks/: First_two_model_pipeline.ipynb  NER.ipynb
openai_client/: generate.py  ouput_schema.py  setup.py
