[project]
name = "book-recommendation-rag"
version = "0.1.0"
requires-python = ">=3.12.9"
dependencies = [
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncio==4.0.0",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "colorama==0.4.6",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "frozenlist==1.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-aiohttp==0.1.9",
    "huggingface-hub>=1.1.6",
    "idna==3.11",
    "jiter==0.12.0",
    "multidict==6.7.0",
    "numpy==2.3.5",
    "openai==2.8.1",
    "orjson==3.11.4",
    "pandas==2.3.3",
    "propcache==0.4.1",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "yarl==1.22.0",
]
